# gnome-wallpaperz

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: filters.rs  lib.rs  main.rs
templates/: index.xml  starttime.xml  static.xml  transition.xml
